// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar - Snapshots > matches snapshot with AvatarFallback only 1`] = `
<span
  class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
>
  <span
    class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted"
  >
    JD
  </span>
</span>
`;

exports[`Avatar - Snapshots > matches snapshot with AvatarImage and AvatarFallback 1`] = `
<span
  class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
>
  <span
    class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted"
  >
    JD
  </span>
</span>
`;

exports[`Avatar - Snapshots > matches snapshot with custom AvatarFallback className 1`] = `
<span
  class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
>
  <span
    class="flex h-full w-full items-center justify-center rounded-full border border-muted-foreground bg-muted custom-fallback"
  >
    AB
  </span>
</span>
`;

exports[`Avatar - Snapshots > matches snapshot with custom className 1`] = `
<span
  class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10 custom-avatar"
/>
`;

exports[`Avatar - Snapshots > matches snapshot with custom data attribute 1`] = `
<span
  class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
  data-custom="custom-avatar"
/>
`;

exports[`Avatar - Snapshots > matches snapshot with default props 1`] = `
<span
  class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
/>
`;
